[package]
name = "i405-tunnel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bitvec = "1"
bytesize = "2"
clap = "4"
ctrlc = { version = "3", features = ["termination"] }
declarative_enum_dispatch = "0.1.2"
enumflags2 = "0.7.11"
env_logger = "0.11"
humantime = "2"
ipnet = "2"
log = "0.4"
mtu = "0.2.9"
tun-rs = { version = "2", features = [ "experimental"] }
wolfssl.branch = "markasoftware/psk-and-rw-signatures"
wolfssl.git = "https://github.com/markasoftware/wolfssl-rs"

[dev-dependencies]
test-case = "3"

[features]
wolfssl-debug = ["wolfssl/debug"]
jumbo-packets = []
