[package]
name = "i405-tunnel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bitvec = "1"
bytesize = "2"
clap = {version = "4.5", features = ["wrap_help"] }
ctrlc = { version = "3", features = ["termination"] }
declarative_enum_dispatch = "0.1.2"
enumflags2 = "0.7.11"
env_logger = "0.11"
humantime = "2"
ipnet = "2"
libc = "0.2.174"
log = "0.4"
mtu = "0.2.9"
rand_chacha = { version = "0.9.0", features = ["os_rng"] }
tun-rs = { version = "2", features = ["experimental"] }
wolfssl.branch = "markasoftware/psk-and-rw-signatures"
wolfssl.git = "https://github.com/markasoftware/wolfssl-rs"

[dev-dependencies]
libtest-mimic = "0.8"
nix = { version = "0.30", features = ["user", "signal"] }
regex = "1"
serde_json = "1"
tempfile = "3"
test-case = "3"

[profile.release]
overflow-checks = true

[[test]]
name = "e2e_test"
harness = false

[features]
wolfssl-debug = ["wolfssl/debug"]
jumbo-packets = []
